--- a/package.json
+++ b/package.json
@@ -1,16 +1,17 @@
 {
   "name": "landing-page",
   "version": "1.0.0",
-  "description": "A Pen created at CodePen.io. You can find this one at http://codepen.io/Sestri4kina/pen/EyErkY.",
+  "description": "Classical landing page with responsive design.",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "deploy:github-pages": "git subtree push --prefix src origin gh-pages"
   },
   "repository": {
     "type": "git",
     "url": "git+https://github.com/Sestri4kina/landing-page.git"
   },
-  "author": "",
+  "author": "Anastasiia Bratochkina",
   "license": "ISC",
   "bugs": {
     "url": "https://github.com/Sestri4kina/landing-page/issues"
