--- a/package.json
+++ b/package.json
@@ -4,8 +4,7 @@
   "description": "Classical landing page with responsive design.",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "deploy:github-pages": "git subtree push --prefix src origin gh-pages"
+    "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
     "type": "git",
@@ -19,6 +18,7 @@
   "homepage": "https://github.com/Sestri4kina/landing-page#readme",
   "devDependencies": {
     "gulp": "^3.9.1",
+    "gulp-gh-pages": "^0.5.4",
     "gulp-sass": "^3.0.0"
   }
 }
