Add minor changes

--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "landing-page",
   "version": "1.0.0",
   "description": "Classical landing page with responsive design.",
-  "main": "index.js",
+  "main": "gulpfile.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
